// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`responsiveness should get correct responsive CSS decleration 1`] = `
{
  "@media screen and (width >= 1200px)": {
    "width": "50px",
  },
  "@media screen and (width >= 575px)": {
    "height": "500px",
    "width": "20px",
  },
  "@media screen and (width >= 992px)": {
    "width": "40px",
  },
  "@media screen and (width >=768px)": {
    "height": "100%",
    "width": "30px",
  },
  "height": "100px",
  "width": "10px",
}
`;

exports[`responsiveness should get correct responsive CSS decleration 2`] = `
{
  "@media screen and (width >= 575px)": {
    "height": "500px",
  },
  "@media screen and (width >=768px)": {
    "height": "100%",
  },
  "height": "100px",
}
`;
